--- a/css/master.css
+++ b/css/master.css
@@ -71,8 +71,12 @@ button {
   padding: 15px 30px;
   font-weight: bold;
   font-size: 12px;
-  letter-spacing: 2px;
+  letter-spacing: 4px;
   border-radius: 30px;
+}
+.shape {
+  box-shadow: 0px 0px 20px rgb(0, 0, 0, 0.2);
+  background-color: white;
 }
 /*  
 start the design
@@ -89,7 +93,7 @@ header::before,
 header::after {
   content: "";
   position: absolute;
-  rotate: 45deg;
+  transform: rotate(45deg);
   width: 10px;
   height: 10px;
   border: 1px solid var(--paragraph-color);
@@ -175,7 +179,7 @@ header .container i {
   align-items: center;
 }
 .info .container img {
-  width: fit-content;
+  width: 115px;
   margin-bottom: 50px;
 }
 .info .container p {
@@ -187,6 +191,7 @@ header .container i {
 }
 .services {
   background-color: #f4f4f4;
+  padding-bottom: 0px;
 }
 .services-content {
   display: grid;
@@ -197,10 +202,7 @@ header .container i {
 .services .services-content .cell {
   text-align: center;
 }
-.shape {
-  box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.4);
-  background-color: white;
-}
+
 .services .services-content .cell .box {
   padding: 40px 20px 20px;
   margin: 0px 0px 20px;
@@ -269,4 +271,125 @@ header .container i {
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.portfolio-content .list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.portfolio-content .list ul {
+  display: flex;
+}
+.portfolio-content .list ul li {
+  padding: 20px 60px;
+  border-top: 1px solid var(--paragraph-color);
+  border-bottom: 1px solid var(--paragraph-color);
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 14px;
+  letter-spacing: 6px;
+
+  text-align: center;
+}
+@media (max-width: 1199px) {
+  .portfolio-content .list ul li {
+    padding: 30px 40px;
+  }
+  .portfolio-content .list img {
+    width: 90px;
+  }
+}
+@media (max-width: 991px) {
+  .portfolio-content .list ul {
+    flex-direction: column;
+  }
+  .portfolio-content .list ul li {
+    border-top: none;
+    margin: 0px 0px 10px;
+  }
+}
+@media (max-width: 767px) {
+  .portfolio-content .list {
+    flex-direction: column;
+  }
+  .portfolio-content .list img {
+    order: -1;
+    margin: 0px 0px 20px;
+  }
+}
+.images {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 60px;
+}
+.images .box img {
+  width: 100%;
+}
+.images .box:nth-child(2) {
+  position: relative;
+}
+
+.images .box:nth-child(2) .text {
+  position: absolute;
+  padding: 20px 15px 15px;
+  text-align: center;
+  width: 90%;
+  max-height: 80%;
+  z-index: 1;
+  background-color: rgb(255, 255, 255, 0.95);
+  transition: 00.3s;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.images .box:nth-child(2) .text::before,
+.images .box:nth-child(2) .text::after {
+  position: absolute;
+  content: "";
+  background-color: rgb(255, 229, 0, 0.9);
+  height: 20px;
+  width: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.images .box:nth-child(2) .text::before {
+  top: -20px;
+}
+.images .box:nth-child(2) .text::after {
+  bottom: -20px;
+}
+.images .box:nth-child(2) .text h5 {
+  text-transform: uppercase;
+  font-weight: 500;
+  margin: 0px 0px 20px;
+  font-size: 15px;
+}
+.images .box:nth-child(2) .text p {
+  color: var(--paragraph-color);
+  font-size: 14px;
+  line-height: 1.8;
+}
+@media (min-width: 768px) {
+  .images .box {
+    width: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  .images .box {
+    width: 25%;
+  }
+}
+.portfolio button {
+  border-radius: 0px;
+  margin: 80px auto;
+  display: block;
+}
+.portfolio .black-background button {
+  border: 1px solid var(--main-color);
+  background-color: transparent;
+  color: var(--main-color);
+  font-weight: 500;
+  font-size: 15px;
+  letter-spacing: 8px;
 }
